# spam-classifier

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
notebooks/: 01_sms_spam_classification.ipynb
src/spam_classifier/: __init__.py  data.py  evaluation.py  modeling.py
tests/: test_data.py  test_modeling.py  test_threshold_evaluation.py
