[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sms-spam-classifier"
version = "0.1.0"
description = "A reproducible classical NLP workflow for SMS spam classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter",
    "matplotlib",
    "nbconvert",
    "numpy",
    "pandas",
    "pytest",
    "scikit-learn",
    "seaborn",
    "ucimlrepo",
]

[tool.setuptools.packages.find]
where = ["src"]

